framec_tests/language_specific/rust/v3_facade_smoke/negative/strict_invalid_native.frm
@target rust

system S {
    machine:
        $A {
            e() {
                // Invalid Rust native statement to trigger strict parser
                let bad = ;
                => $^;
            }
        }
}

